2001-05-21  Martin Buchholz  <martin@xemacs.org>

	* lwlib-config.c: Remove.
	* Makefile.in.in: Remove references to lwlib-config.

2001-05-09  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.5.1 "anise" is released.

2001-04-28  Ben Wing  <ben@xemacs.org>

	* lwlib-utils.c (destroy_all_children): fix warning reported by
	Isaac Hollander <ysh@mindspring.com>.

2001-04-18  Martin Buchholz  <martin@xemacs.org>

	* XEmacs 21.5.0 "alfalfa" is released.

2001-03-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* ChangeLog: Restore logs lost in the GTK merge.

2001-03-21  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.46 "Urania" is released.

2001-03-15  Stephen J. Turnbull  <stephen@xemacs.org>

	* xlwradio.c: Revert gratuitous whitespace changes from GTK merge.

2001-02-23  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.45 "Thelxepeia" is released.

2001-02-16  Raymond Toy  <toy@rtp.ericsson.se>

	* lwlib-Xaw.c: Always include ATHENA_AsciiText_h_ to get the
	text-field widget.
	(xaw_creation_table): Always include the text-field widget

2001-02-08  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.44 "Thalia" is released.

2001-02-06  Martin Buchholz  <martin@xemacs.org>

	* xlwgauge.c:
	* xlwgcs.c:
	* xlwgcs.c (XtAllocateGC): Fix typo for X11R4.
	* xlwgcs.h:
	* xlwradio.c (RadioExpose):
	* xlwcheckbox.c:
	Remove use of BSD-specific types.
	s/u_(char|short|int_long)/unsigned $1/g

2001-02-05  Martin Buchholz  <martin@xemacs.org>

	* lwlib-Xm.c (xm_update_one_value):
	Obey the man page; use XtFree instead of free.

2001-02-02  Martin Buchholz  <martin@xemacs.org>

	* config.h.in: Use "..." to include config.h

2001-01-26  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.43 "Terspichore" is released.

2001-01-20  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.42 "Poseidon" is released.

2001-01-17  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.2.41 "Polyhymnia" is released.

2001-01-08  Martin Buchholz <martin@xemacs.org>
