@@ -1,3 +1,13 @@
+2001-07-26  Andy Piper  <andy@xemacs.org>
+
+	* lwlib-Xm.c (xm_update_progress): new function. Set Scale height
+	and width from normal height and width.
+	* lwlib-Xm.c (xm_create_progress): ditto.
+	* lwlib-Xm.c (xm_update_one_widget): call xm_update_progress.
+	* lwlib.c (lw_get_value_arg): new function. Return an argument
+	based on its name.
+	* lwlib.h: declare it.
+
 2001-05-21  Martin Buchholz  <martin@xemacs.org>
 
 	* lwlib-config.c: Remove.
